# VentoyISOManager

./: LICENSE.MD  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.svelte  app.css  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: IsoCloudMenu.svelte  Modal.svelte  ModalBuilder.ts  Suggestion.svelte  utils.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  es.json  template.json
