[package]
name = "ventoyisomanager"
version = "0.1.0"
description = "A Tauri App"
authors = ["Dilial"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ventoyisomanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
indicatif = "0.18.4"
futures-util = "0.3.32"
tokio = "1.50.0"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
rfd = "0.17.2"
sha2 = "0.10.9"
dotenvy = "0.15.7"
sysinfo = { version = "0.38.4", features = ["disk"] }
uuid = { version = "1.23.1", features = ["v4"] }

